| Bug #37531 | After truncate, auto_increment behaves incorrectly for InnoDB | ||
|---|---|---|---|
| Submitted: | 19 Jun 2008 21:38 | Modified: | 16 Sep 2008 6:58 |
| Reporter: | Ryan Thiessen | ||
| Status: | Closed | ||
| Category: | Server: InnoDB | Severity: | S3 (Non-critical) |
| Version: | 5.1.25/6.0 | OS: | Any |
| Assigned to: | Timothy Smith | Target Version: | 5.1+ |
| Tags: | auto_increment, truncate | ||
| Triage: | D2 (Serious) | ||
[19 Jun 2008 21:38]
Ryan Thiessen
[19 Jun 2008 22:58]
Miguel Solorzano
Thank you for the bug report. This bug not affects 5.0 and it is repeatable on 6.0 and 5.1.23 and 5.1BK. c:\dbs>c:\dbs\5.1\bin\mysql -uroot --port=3510 --prompt="mysql 5.1 >" Welcome to the MySQL monitor. Commands end with ; or \g. Your MySQL connection id is 1 Server version: 5.1.26-rc-nt-log Source distribution Type 'help;' or '\h' for help. Type '\c' to clear the buffer. mysql 5.1 >use test Database changed mysql 5.1 >create table autoinc_truncate_bug(pk int primary key auto_increment) engine=innodb; Query OK, 0 rows affected (0.20 sec) mysql 5.1 >insert into autoinc_truncate_bug values (1), (2), (3); Query OK, 3 rows affected (0.09 sec) Records: 3 Duplicates: 0 Warnings: 0 mysql 5.1 >insert into autoinc_truncate_bug values (Null), (Null), (Null); Query OK, 3 rows affected (0.11 sec) Records: 3 Duplicates: 0 Warnings: 0 mysql 5.1 >truncate table autoinc_truncate_bug; Query OK, 6 rows affected (0.05 sec) mysql 5.1 >insert into autoinc_truncate_bug values (1), (2), (3); Query OK, 3 rows affected (0.08 sec) Records: 3 Duplicates: 0 Warnings: 0 mysql 5.1 ># succeeds, but auto_increment counter not updated mysql 5.1 >insert into autoinc_truncate_bug values (Null), (Null), (Null); ERROR 1062 (23000): Duplicate entry '1' for key 'PRIMARY' mysql 5.1 ># final insert fails with duplicate key error mysql 5.1 > c:\dbs>c:\dbs\5.0\bin\mysql -uroot --port=3500 --prompt="mysql 5.0 > " Welcome to the MySQL monitor. Commands end with ; or \g. Your MySQL connection id is 1 Server version: 5.0.64-nt-log Source distribution Type 'help;' or '\h' for help. Type '\c' to clear the buffer. mysql 5.0 > create database db5; Query OK, 1 row affected (0.00 sec) mysql 5.0 > use db5 Database changed mysql 5.0 > create table autoinc_truncate_bug(pk int primary key auto_increment) engine=innodb; Query OK, 0 rows affected (0.09 sec) mysql 5.0 > insert into autoinc_truncate_bug values (1), (2), (3); Query OK, 3 rows affected (0.09 sec) Records: 3 Duplicates: 0 Warnings: 0 mysql 5.0 > insert into autoinc_truncate_bug values (Null), (Null), (Null); Query OK, 3 rows affected (0.08 sec) Records: 3 Duplicates: 0 Warnings: 0 mysql 5.0 > truncate table autoinc_truncate_bug; Query OK, 6 rows affected (0.05 sec) mysql 5.0 > insert into autoinc_truncate_bug values (1), (2), (3); Query OK, 3 rows affected (0.08 sec) Records: 3 Duplicates: 0 Warnings: 0 mysql 5.0 > # succeeds, but auto_increment counter not updated mysql 5.0 > insert into autoinc_truncate_bug values (Null), (Null), (Null); Query OK, 3 rows affected (0.08 sec) Records: 3 Duplicates: 0 Warnings: 0 mysql 5.0 > # final insert fails with duplicate key error mysql 5.0 >
[19 Jun 2008 23:58]
Ken Jacobs
It seems a readily available and effective workaround is to ALTER the autoinc value after the table is truncated. This is not to suggest that this should not be corrected, only that the triage code of W1 (none) has overlooked a simple workaround. create table autoinc_truncate_bug(pk int primary key auto_increment) engine=innodb; insert into autoinc_truncate_bug values (1), (2), (3); insert into autoinc_truncate_bug values (Null), (Null), (Null); truncate table autoinc_truncate_bug; # re-initialize the autoinc value right after truncation alter table truncate_bug ATUT_INCREMENT = n; /* set n as desired */ insert into autoinc_truncate_bug values (1), (2), (3); # succeeds, but auto_increment counter not updated insert into autoinc_truncate_bug values (Null), (Null), (Null); # final insert fails with duplicate key error
[20 Jun 2008 0:33]
Miguel Solorzano
Adding work-around flag.
[20 Jun 2008 1:14]
Miguel Solorzano
A small correction about the work-around provided by Ken (he asked me to do): Read: alter table truncate_bug AUTO_INCREMENT = n; and not alter table truncate_bug ATUT_INCREMENT = n; Thanks Ken.
[20 Jun 2008 1:14]
Sunny Bains
The cached last value (prebuilt->last_value) needs to be reset on TRUNCATE TABLE. I have a very simple fix for this bug. Regards, -sunny
[24 Jun 2008 2:01]
Omer BarNir
triage: setting to P3 as this is a regression
[2 Aug 2008 7:40]
Calvin Sun
Fixed in snapshot innodb-5.1-ss2545.tar.gz.
[21 Aug 2008 0:23]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/52096 2715 Timothy Smith 2008-08-20 Cherry-pick some changes from innodb-5.1-ss2545 snapshot. Includes fixes for Bug#37531, Bug#36941, Bug#36941, Bug#36942, Bug#38185. Also include test case from Bug 34300 which was left out from earlier snapshot (5.1-ss2387). Also include fix for Bug #29507, "TRUNCATE shows to many rows effected", since the fix for Bug 37531 depends on it.
[21 Aug 2008 19:59]
Bugs System
Pushed into 5.1.28 (revid:timothy.smith@sun.com-20080820221833-brmru9b77ddt3tfx) (version source revid:azundris@mysql.com-20080821081500-f2d61fh4u61owz3p) (pib:3)
[22 Aug 2008 1:41]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/52267 2794 Timothy Smith 2008-08-21 [merge] Merge up from 5.1-bugteam. Among other things, this applies some changes from the innodb-5.1-ss2545 snapshot into 6.0, fixing Bug#37531, Bug#36941, Bug#36942, and Bug#38185.
[22 Aug 2008 1:43]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/52268 2794 Timothy Smith 2008-08-21 [merge] Merge up from 5.1-bugteam. Among other things, this applies some changes from the innodb-5.1-ss2545 snapshot into 6.0, fixing Bug#37531, Bug#36941, Bug#36942, and Bug#38185.
[27 Aug 2008 3:38]
Paul DuBois
Noted in 5.1.28 changelog. After TRUNCATE TABLE for an InnoDB table, inserting explicit values into an AUTO_INCREMENT column could fail to increment the counter and result in a duplicate-key error for subsequent insertion of NULL. Setting report to NDI pending push into 6.0.x.
[14 Sep 2008 1:42]
Bugs System
Pushed into 6.0.7-alpha (revid:timothy.smith@sun.com-20080820221833-brmru9b77ddt3tfx) (version source revid:john.embretsen@sun.com-20080808091208-ht48kyzsk7rim74g) (pib:3)
[16 Sep 2008 6:58]
Paul DuBois
Noted in 6.0.7 changelog.
